--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,15 @@
-{
-  "version": 2,
-  "builds": [
+{ 
+    "version": 2,
+      "builds": [
     {
       "src": "app.js",
       "use": "@now/node"
     }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "app.js"
-    }
-  ]
+    ],
+    "rewrites": [
+        {
+            "source": "/(.*)",
+            "destination": "app.js" 
+            }
+        ] 
 }
