--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,1 @@
-{ 
-    "version": 2,
-      "builds": [
-    {
-      "src": "app.js",
-      "use": "@now/node"
-    }
-    ],
-    "rewrites": [
-        {
-            "source": "/(.*)",
-            "destination": "app.js" 
-            }
-        ] 
-}
+{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/api" }] }
